[gd_scene load_steps=10 format=3 uid="uid://dw0rs828ler2y"]

[ext_resource type="Script" path="res://scenes/main_menu.gd" id="1_d2kbj"]
[ext_resource type="Texture2D" uid="uid://dnhe37xnrr5ld" path="res://textures/menu_icon.png" id="1_o578h"]
[ext_resource type="Texture2D" uid="uid://cawklhbo5e6oq" path="res://textures/camp_oakwood_text.png" id="2_k84ms"]
[ext_resource type="AudioStream" uid="uid://2kb5x12d1d8p" path="res://music/camp_oakwood_menu.mp3" id="3_vwd27"]
[ext_resource type="AudioStream" uid="uid://by5p8off3n2nm" path="res://sounds/camp_oakwood_piano_sound.mp3" id="5_j7j1d"]
[ext_resource type="AudioStream" uid="uid://cgooklo4wjcj8" path="res://sounds/night_whisper.mp3" id="6_yeeor"]

[sub_resource type="Animation" id="Animation_gfmk0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_vh7dp"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gugv7"]
_data = {
"RESET": SubResource("Animation_gfmk0"),
"fade_out": SubResource("Animation_vh7dp")
}

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d2kbj")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -5

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = 658.0
offset_top = 441.0
offset_right = 1336.0
offset_bottom = 926.0
texture = ExtResource("1_o578h")
region_rect = Rect2(16, 16, 288, 288)
patch_margin_left = 48
patch_margin_top = 48
patch_margin_right = 48
patch_margin_bottom = 48

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect"]
layout_mode = 1
offset_left = 214.0
offset_top = 140.0
offset_right = 466.0
offset_bottom = 298.0

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer"]
layout_mode = 2

[node name="play" type="Button" parent="NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Play"

[node name="quit" type="Button" parent="NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Quit"

[node name="CampOakwoodText" type="Sprite2D" parent="."]
position = Vector2(1004, 272)
scale = Vector2(8.4, 8.4)
texture = ExtResource("2_k84ms")

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_vwd27")
autoplay = true

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer2"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer2"]
libraries = {
"": SubResource("AnimationLibrary_gugv7")
}

[node name="piano_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_j7j1d")

[node name="night_whisper" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_yeeor")
volume_db = 9.521
pitch_scale = 0.67

[connection signal="pressed" from="NinePatchRect/MarginContainer/VBoxContainer/play" to="." method="_on_play_pressed"]
